# Rhsystem

app/: main.py
app/app/: database.py  models.py
app/app/app/: auth.py  schemas.py
app/app/app/app/: deps.py
app/app/app/app/app/routers/: auth_router.py
app/app/app/app/app/routers/app/routers/: departments_router.py
app/app/app/app/app/routers/app/routers/app/routers/: employees_router.py
app/app/app/app/app/routers/app/routers/app/routers/pp/routers/: .env.example  README.md  leaves_router.py  pyproject.toml
